tests/e2e/unary_complex_2.error
Error: syntax error in story at line 1, column 5

1|    a = ! 2 == !3 or ! 4
          ^^^

E0122: `int` can't be converted to `boolean`
