tests/e2e/unary_complex_2.story
a = ! 2 == !3 or ! 4
